Fix alignment, again.

--- a/assets/movies/movies.scss
+++ b/assets/movies/movies.scss
@@ -104,6 +104,8 @@
 
       .poster {
         align-self: initial;
+        margin-left: initial;
+        margin-right: initial;
       }
 
       .more-thoughts :last-child {
